# MTA

./: .gitignore  APPS-TODO.txt  NOTES.txt  README.md  TODO.txt  gpu_checkup.py  install.py  main.py  pyproject.toml
src/my_package/apps/: __init__.py  nsp.py  remedy.py
src/my_package/utils/: __init__.py  capture_and_click.py  capture_full_screenshot.py  classes.py  config.py  create_txt_file.py  open_app.py  read_image.py  save_dict_to_text.py  user_input.py
