
[project]
name = "test"
version = "0.1.0"
description = "A test project with PyTorch CUDA support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "easyocr>=1.7.0",
    "keyboard>=0.13.5",
    "mss>=9.0.2",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.9",
    "screeninfo>=0.8.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages.find = { where = ["src"] }
